# Babel

./: .gitignore  Babel_Client  CMakeLists.txt  ClearCMake.sh  TODO  vcpkg.json
archive/client/: Call_Journals.hpp  Contacts.hpp
archive/server/: Call_Journals.hpp  Contacts.hpp
bootstrap/: Client.hpp  MyWindow.cpp  MyWindow.hpp  archive.hpp  asio.cpp  client  client.cpp  devices.cpp  devices_macos.cpp  doc.hpp  new_client.cpp  new_server.cpp  qt_test.cpp  read  record  records  send.cpp  server  test_read.cpp  test_voice.cpp
client/: Babel_Client  CMakeLists.txt
client/includes/: Audio.hpp  Cli.hpp  Contacts.hpp  NetworkManager.hpp
client/src/: Cli.cpp  NetworkManager.cpp  main.cpp
common/: Client.hpp  Message.hpp
final/: .gitignore  Protocole.md  Window.hpp
server/: CMakeLists.txt
server/db/: database.sqlite
server/includes/: Client.hpp  ClientHandler.hpp  Contacts.hpp  DatabasesSqlite.hpp  MultiClientServer.hpp  Server.hpp  server.hpp
server/src/: ClientHandler.cpp  MultiClientServer.cpp  main.cpp
